fixed overflow issue on lead img

--- a/blogr-landing-page/src/components/Lead/Lead.scss
+++ b/blogr-landing-page/src/components/Lead/Lead.scss
@@ -27,10 +27,10 @@
 }
 
 .lead-img-container {
+  overflow-x: clip;
   img {
     position: relative;
     transform: scale(1.2);
     left: 8.5rem;
-    overflow: hidden;
   }
 }
